--- a/docs/api-reference/CRMScript.Native.File.yml
+++ b/docs/api-reference/CRMScript.Native.File.yml
@@ -7,23 +7,40 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.Native.File.#ctor
   - CRMScript.Native.File.close()
   - CRMScript.Native.File.eof()
-  - CRMScript.Native.File.#ctor()
   - CRMScript.Native.File.flush()
+  - CRMScript.Native.File.open(String,String)
   - CRMScript.Native.File.open(String,String,String)
   - CRMScript.Native.File.readAll()
   - CRMScript.Native.File.readBinary()
   - CRMScript.Native.File.readLine()
   - CRMScript.Native.File.rewind()
   - CRMScript.Native.File.unlink()
-  - CRMScript.Native.File.write(String,String)
+  - CRMScript.Native.File.write(String)
   - CRMScript.Native.File.writeBinary(Byte[])
   name: File
   nameWithType: File
   fullName: CRMScript.Native.File
   type: Class
-  summary: "\nThis represents a file.<p></p>\nUse open before you call any other methods.\n"
+  summary: "\nRepresents a file.<p></p>\nUse open() before you call any other methods.\n"
+  example: 
+  - "\n<pre><code>File f;\n\nf.open(&quot;test.txt&quot;, &quot;a+&quot;); // Opening file appending (and creating)\nf.write(&quot;test&quot;);\nf.close(); // Closing the file when done writing\n\nFile g;\n\ng.open(&quot;test.txt&quot;, &quot;r&quot;); // Opening file for reading only\nprint(g.readAll());</code></pre>\n"
+- uid: CRMScript.Native.File.#ctor
+  commentId: M:CRMScript.Native.File.#ctor
+  id: '#ctor'
+  so.intellisense: Void.File
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: File.#ctor
+  fullName: CRMScript.Native.File.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the File class.\n"
+  remarks: "\nUse open() before you call any other methods.\n"
+  syntax: 
+    content: File
   example: 
   - "\n<pre><code>File f;\n\nf.open(&quot;test.txt&quot;, &quot;a+&quot;); // Opening file appending (and creating)\nf.write(&quot;test&quot;);\nf.close(); // Closing the file when done writing\n\nFile g;\n\ng.open(&quot;test.txt&quot;, &quot;r&quot;); // Opening file for reading only\nprint(g.readAll());</code></pre>\n"
 - uid: CRMScript.Native.File.close()
@@ -36,11 +53,13 @@ items:
   nameWithType: File.close()
   fullName: CRMScript.Native.File.close()
   type: Method
-  summary: "\nThis function closes the file, the File object is then ready for<code>open()</code>-ing a new file\n"
+  summary: "\nCloses the file. The File object is then ready to open a new file.\n"
   remarks: 
   syntax: 
-    content: close()
-    parameters:
+    content: Void close()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.eof()
   commentId: M:CRMScript.Native.File.eof()
@@ -52,28 +71,15 @@ items:
   nameWithType: File.eof()
   fullName: CRMScript.Native.File.eof()
   type: Method
-  summary: "\n<ul><li><strong>Returns:</strong>True if a read passed the end of file has been attempted.</li></ul>When you read lines in a loop, you can break out of the loop when this function return true.\n"
-  remarks: 
+  summary: "\nReturns true if a read passed the end of file has been attempted.\n"
+  remarks: "\nWhen you read lines in a loop, you can break out of the loop when this function return true.\n"
   syntax: 
-    content: eof()
-    parameters:
+    content: Bool eof()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: true if a read passed the end of file has been attempted; otherwise, false.
   example: 
-- uid: CRMScript.Native.File.#ctor()
-  commentId: M:CRMScript.Native.File.#ctor()
-  id: '#ctor()'
-  so.intellisense: Void.File
-  langs:
-  - crmscript
-  name: '#ctor()'
-  nameWithType: File.#ctor()
-  fullName: CRMScript.Native.File.#ctor()
-  type: Constructor
-  summary: "\nThis represents a file.<p></p>\nUse open before you call any other methods.\n"
-  remarks: 
-  syntax: 
-    content: File
-  example: 
-  - "\n<pre><code>File f;\n\nf.open(&quot;test.txt&quot;, &quot;a+&quot;); // Opening file appending (and creating)\nf.write(&quot;test&quot;);\nf.close(); // Closing the file when done writing\n\nFile g;\n\ng.open(&quot;test.txt&quot;, &quot;r&quot;); // Opening file for reading only\nprint(g.readAll());</code></pre>\n"
 - uid: CRMScript.Native.File.flush()
   commentId: M:CRMScript.Native.File.flush()
   id: 'flush()'
@@ -84,11 +90,38 @@ items:
   nameWithType: File.flush()
   fullName: CRMScript.Native.File.flush()
   type: Method
-  summary: "\nFlush will empty the output buffer, writing the data to the file.\n"
+  summary: "\nEmpties the output buffer, writing the data to the file.\n"
   remarks: 
   syntax: 
     content: flush()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
+  example: 
+- uid: CRMScript.Native.File.open(String,String)
+  commentId: M:CRMScript.Native.File.open(String,String)
+  id: 'open(String,String)'
+  so.intellisense: File.open
+  langs:
+  - crmscript
+  name: 'open(String,String)'
+  nameWithType: File.open(String,String)
+  fullName: CRMScript.Native.File.open(String,String)
+  type: Method
+  summary: "\nOpens the file to be available for other calls.\n"
+  remarks: "\nUse open(String,String,String) to provide a codepage.<p></p>\nModes:<table><thead><tr><th>Mode</th><th>Description</th></tr></thead><tbody><tr><td>r or rb</td><td>Open file for reading.</td></tr><tr><td>w or wb</td><td>Truncate to zero length or create a file for writing.</td></tr><tr><td>a or ab</td><td>Append; open or create a file for writing at the end-of-file.</td></tr><tr><td>r+ or rb+ or r+b</td><td>Open file for update (reading and writing).</td></tr><tr><td>w+ or wb+ or w+b</td><td>Truncate to zero length or create a file for update.</td></tr></tbody></table>\n"
+  syntax: 
+    content: Bool open(String filename, String mode)
     parameters:
+    - id: filename
+      type: CRMScript.Global.String
+      description: Path to the file
+    - id: mode
+      type: CRMScript.Global.String
+      description: How to open the file
+    return:
+      type: CRMScript.Global.Bool
+      description:
   example: 
 - uid: CRMScript.Native.File.open(String,String,String)
   commentId: M:CRMScript.Native.File.open(String,String,String)
@@ -100,10 +133,10 @@ items:
   nameWithType: File.open(String,String,String)
   fullName: CRMScript.Native.File.open(String,String,String)
   type: Method
-  summary: "\nCRMScript method in the File class that opens the file to be available for other callsOpens the file to be available for other method calls.<p></p>\nYou can optionally provide a codepage.\n"
-  remarks: "\n<h3>Modes</h3><table><thead><tr><th>Mode</th><th>Description</th></tr></thead><tbody><tr><td>r or rb</td><td>Open file for reading.</td></tr><tr><td>w or wb</td><td>Truncate to zero length or create a file for writing.</td></tr><tr><td>a or ab</td><td>Append; open or create a file for writing at the end-of-file.</td></tr><tr><td>r+ or rb+ or r+b</td><td>Open file for update (reading and writing).</td></tr><tr><td>w+ or wb+ or w+b</td><td>Truncate to zero length or create a file for update.</td></tr></tbody></table>\n"
+  summary: "\nOpens the file with a codepage to be available for other calls.\n"
+  remarks: "\nUse open(String,String) if you don't need to specify codepage.<p></p>\nModes:<table><thead><tr><th>Mode</th><th>Description</th></tr></thead><tbody><tr><td>r or rb</td><td>Open file for reading.</td></tr><tr><td>w or wb</td><td>Truncate to zero length or create a file for writing.</td></tr><tr><td>a or ab</td><td>Append; open or create a file for writing at the end-of-file.</td></tr><tr><td>r+ or rb+ or r+b</td><td>Open file for update (reading and writing).</td></tr><tr><td>w+ or wb+ or w+b</td><td>Truncate to zero length or create a file for update.</td></tr></tbody></table>\n"
   syntax: 
-    content: open()
+    content: Bool open(String filename, String mode, String codepage)
     parameters:
     - id: filename
       type: CRMScript.Global.String
@@ -113,7 +146,10 @@ items:
       description: How to open the file
     - id: codepage
       type: CRMScript.Global.String
-      description: Optional. What text codepage the file is in. Default is ISO-8859-1 (Latin-1), but UTF-8 is common for Unicode text files.
+      description: What text codepage the file is in. Default is ISO-8859-1 (Latin-1), but UTF-8 is common for Unicode text files.
+    return:
+      type: CRMScript.Global.Bool
+      description:
   example: 
 - uid: CRMScript.Native.File.readAll()
   commentId: M:CRMScript.Native.File.readAll()
@@ -125,11 +161,14 @@ items:
   nameWithType: File.readAll()
   fullName: CRMScript.Native.File.readAll()
   type: Method
-  summary: "\n<ul><li><strong>Returns:</strong>All text from the file.</li></ul>\n"
+  summary: "\nReturns all text from the file.\n"
   remarks: 
   syntax: 
-    content: readAll()
-    parameters:
+    content: String readAll()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.File.readBinary()
   commentId: M:CRMScript.Native.File.readBinary()
@@ -141,11 +180,14 @@ items:
   nameWithType: File.readBinary()
   fullName: CRMScript.Native.File.readBinary()
   type: Method
-  summary: "\n<ul><li><strong>Returns:</strong>Reads the file and returns binary data in a Byte array</li></ul>\n"
+  summary: "\nReads the file and returns binary data in a Byte array.\n"
   remarks: 
   syntax: 
-    content: readBinary()
-    parameters:
+    content: Byte readBinary()
+    parameters: []
+    return:
+      type: CRMScript.Global.Byte[]
+      description: Binary data
   example: 
 - uid: CRMScript.Native.File.readLine()
   commentId: M:CRMScript.Native.File.readLine()
@@ -157,11 +199,14 @@ items:
   nameWithType: File.readLine()
   fullName: CRMScript.Native.File.readLine()
   type: Method
-  summary: "\n<ul><li><strong>Returns:</strong>The next line from the file or a null string if no more data in the file.</li></ul>\n"
+  summary: "\nReturns the next line from the file or a null string if no more data in the file.\n"
   remarks: 
   syntax: 
-    content: readLine()
-    parameters:
+    content: String readLine()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The next line from the file or a null string if no more data in the file.
   example: 
 - uid: CRMScript.Native.File.rewind()
   commentId: M:CRMScript.Native.File.rewind()
@@ -173,11 +218,13 @@ items:
   nameWithType: File.rewind()
   fullName: CRMScript.Native.File.rewind()
   type: Method
-  summary: "\nThis function will set the current file pointer to the beginning of the file.\n"
+  summary: "\nSet the current file pointer to the beginning of the file.\n"
   remarks: 
   syntax: 
-    content: rewind()
-    parameters:
+    content: Void rewind()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.unlink()
   commentId: M:CRMScript.Native.File.unlink()
@@ -189,33 +236,35 @@ items:
   nameWithType: File.unlink()
   fullName: CRMScript.Native.File.unlink()
   type: Method
-  summary: "\nThis function will delete the file.\n"
+  summary: "\nDeletes the file.\n"
   remarks: 
   syntax: 
-    content: unlink()
-    parameters:
+    content: Bool unlink()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description:
   example: 
-- uid: CRMScript.Native.File.write(String,String)
-  commentId: M:CRMScript.Native.File.write(String,String)
-  id: 'write(String,String)'
+- uid: CRMScript.Native.File.write(String)
+  commentId: M:CRMScript.Native.File.write(String)
+  id: 'write(String)'
   so.intellisense: File.write
   langs:
   - crmscript
-  name: 'write(String,String)'
-  nameWithType: File.write(String,String)
-  fullName: CRMScript.Native.File.write(String,String)
+  name: 'write(String)'
+  nameWithType: File.write(String)
+  fullName: CRMScript.Native.File.write(String)
   type: Method
-  summary: 
-  remarks: 
+  summary: "\nWrites data to the file.\n"
+  remarks: " \nCan be called many times, adding more and more data to the file.\n"
   syntax: 
-    content: write(String data)
+    content: Void write(String data)
     parameters:
     - id: data
       type: CRMScript.Global.String
-      description: 
-    - id: Data
-      type: CRMScript.Global.String
-      description: 
+      description: String to write to the file
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.writeBinary(Byte[])
   commentId: M:CRMScript.Native.File.writeBinary(Byte[])
@@ -227,14 +276,16 @@ items:
   nameWithType: File.writeBinary(Byte[])
   fullName: CRMScript.Native.File.writeBinary(Byte[])
   type: Method
-  summary: "\nWrite binary data to file.\n"
+  summary: "\nWrites binary data to file.\n"
   remarks: 
   syntax: 
-    content: writeBinary(Byte[] data)
+    content: Void writeBinary(Byte[] data)
     parameters:
     - id: data
       type: CRMScript.Global.Byte[]
-      description: 
+      description: Data in a Byte array that you want to write to the file.
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.File
@@ -269,3 +320,15 @@ references:
   name: Byte
   nameWithType: Byte
   fullName: CRMScript.Global.Byte
+- uid: CRMScript.Global.Bool
+  commentId: T:CRMScript.Global.Bool
+  isExternal: true
+  name: Bool
+  nameWithType: Bool
+  fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
